# HTTP-server

./: .gitignore  CMakeLists.txt  Makefile  he  tester.bash  tmp
CGI-scripts/: NoPermissions.py  No_headers.php  README.txt  WhatTimeIsItToday.js  basicGET.py  debug.py  delete.py  post.py  read_file.py  sleep.py  teapot.py  timeout.py  upload.py
CGI-stuff👍/: CGI.hpp  CGI.py  README.txt  laboratory.cpp
config/: .default.conf.swp  default.conf  test.conf  tester.conf
inc/: AAtributes.hpp  ARequest.hpp  Atributes.hpp  AttributesParser.hpp  CGI.hpp  ConfigurationServer.hpp  EHttpMethodeEnum.hpp  Epoll.hpp  Kqueue.hpp  Location.hpp  Parser.hpp  Redirection.hpp  Request.hpp  Response.hpp  Server.hpp  Socket.hpp  utils.hpp  webserv.hpp
src/: AAtributes.cpp  ARequest.cpp  Atributes.cpp  AttributesParser.cpp  CGI.cpp  ConfigurationServer.cpp  Epoll.cpp  Kqueue.cpp  Location.cpp  Parser.cpp  Redirection.cpp  Request.cpp  Response.cpp  Server.cpp  Socket.cpp  addRedirect.cpp  args.cpp  main.cpp
src/exceptions/: LocationException.cpp
src/utils/: .getExt.cpp.swp  findInsensitive.cpp  getExt.cpp  isSeparator.cpp  strIsdigit.cpp  strNoCase.cpp
static/: cgis  index.html  index_cgis.html  sgoinfre  upload  upload.html  upload_cgi
static/CGI-scripts/: NoPermissions.py  No_headers.php  basicGET.py  cookies.py  delete.py  read_file.py  sleep.py  teapot.php  teapot.py  timeout.py  upload.py
static/CGI-scripts/uploads/: Makefile  main.cpp
static/error/: 403.html  404.html  504.html
tests/: 1.test  bad_version.bash
